--- a/Appointment/Views/Customer/Index.cshtml
+++ b/Appointment/Views/Customer/Index.cshtml
@@ -9,7 +9,7 @@
     <thead>
         <tr>            
             <th class="text-center">First Name</th>
-            <th class="text-center">Last NAme</th>
+            <th class="text-center">Last Name</th>
         </tr>
     </thead>
     <tbody>
