added buttons on Modal

--- a/Appointment/Views/Shared/_AddEditToCalendar.cshtml
+++ b/Appointment/Views/Shared/_AddEditToCalendar.cshtml
@@ -14,6 +14,11 @@
                         <label for="description">Description</label>
                         <textarea type="text" class="form-control" id="title"></textarea>
                     </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" onclick="onCloseModal();">Close</button> &nbsp;
+                        <button type="button" class="btn btn-primary" onclick="onSubmit();">Submit</button>
+                    </div>
+
                 </div>
             </form>
         </div>
