--- a/Appointment/Views/Shared/_AddEditToCalendar.cshtml
+++ b/Appointment/Views/Shared/_AddEditToCalendar.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="modal fade" role="dialog" id="calendarInput" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="calendarForm">
+            <form asp-controller="Home" method="post" id="calendarForm">
                 <div class="modal-header">
                     <h4 class="modal-title">Add/Edit To Calendar</h4>
                 </div>
